# ambarc_llvm

./: .dockerignore  CMakeLists.txt  Dockerfile  Makefile  README.md  ambar  ambar.sh  ambarc  ambc  arquivo.amb  arquivo.amb.ll  arquivo.ll  comands  compile.sh  docker-compose.yml  exemplo.txt  hello  hello.amb  install.ps1  install.sh  intall.bat  metrics.csv  ola.amb  output  rm.sh  test  test.amb
.github/workflows/: build-deb.yml
ambar_files/: fibonacci  fibonacci.amb  fibonacci.ll  n-body  n-body.amb  pi  pi.amb  pi.ll
ambarc_1.0.0_amd64/DEBIAN/: control  postinst  postrm  prerm
c_files/: fibonacci  fibonacci.c  n-body  n-body.c  pi  pi.c
compiler/: compile.sh  ir.sh  rm.sh
graph_generation/: metrics.csv  pi_graph.py
java_files/: NBodyTest.java  PiCalculator.java
javascript_files/: n-body.js  pi.js
python_files/: n-body.py  pi.py
r_files/: n-body.R  pi.R
rust_files/: fibonacci  fibonacci.rs  n-body  n-body.rs  pi_file  pi_file.rs
scripts/: build.sh  install-ubuntu.sh  update.sh
src/: LLVMGenerator.cpp  LLVMGenerator.hpp  SourceLocation.hpp  globals.cpp  main.cpp  main_output
src/generator/: LLVMGenerator.cpp  LLVMGenerator.hpp
tests/: Ambar_individual.csv  Ambar_runs.csv  C_individual.csv  benchmark_results.csv  comparacao.txt  dash.sh  detailed_metrics.csv  detailed_results.csv  exec.py  execucoes.csv  fibonacci  fibonacci.c  medias.csv  metrics.csv  metrics_summary.csv  pi.c  pi_test.sh  plot_metrics.py  time.sh  time_output.txt  time_tmp.txt
tools/: create-deb.sh  fix-deb.sh  installer.sh  requirements.sh  simple-install.sh
(+64 files in other folders)
